fixed footer that was stuck tot the right

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ footer{
     text-align: center;
     width: 100%;
     height: 1%;
+    left: 0px;
     padding: 15px;
     bottom: 0;
     position: fixed;
